中期答辩的代码终止，无注释。 总结问题： 1.加载考勤权限不能够点击退出 2.没有设置开始考勤的不能点击进入考勤 3.没有引导页 4.不能够查询 5.没能实时的检测网络 6.考勤权限获得范围有待优化 7.获取考勤权限时候也会显示没有获得考勤权限

--- a/app/src/main/res/layout/activity_student_checking.xml
+++ b/app/src/main/res/layout/activity_student_checking.xml
@@ -32,25 +32,54 @@
         android:orientation="horizontal"
         android:background="#f5f2f2"
         >
-
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            style="@style/OnClickText"
+            android:orientation="vertical"
             android:gravity="center"
-            android:text="@string/checking"
             android:id="@+id/activity_student_checking_page"
-            />
-        <TextView
+            >
+            <ImageView
+                android:id="@+id/activity_student_checking_page_image_view"
+                android:layout_marginTop="5dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/checking"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/OnClickText"
+                android:gravity="center"
+                android:text="@string/checking"
+                android:id="@+id/activity_student_checking_page_text_view"
+                />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="@string/AskForLeave"
+            android:layout_weight="1"
+            android:orientation="vertical"
             android:gravity="center"
-            style="@style/unClickText"
             android:id="@+id/activity_student_checking_ask_for_leave_page"
-            />
+            >
+            <ImageView
+                android:id="@+id/activity_student_checking_ask_for_leave_page_image_view"
+                android:layout_marginTop="5dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/un_ask_for_leave"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/AskForLeave"
+                android:gravity="center"
+                style="@style/unClickText"
+                android:id="@+id/activity_student_checking_ask_for_leave_page_text_view"
+                />
+        </LinearLayout>
 
 
     </LinearLayout>
