--- a/app/src/main/res/layout/activity_student_index.xml
+++ b/app/src/main/res/layout/activity_student_index.xml
@@ -8,6 +8,7 @@
     android:weightSum="11"
     android:background="#ebebeb"
     >
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -15,6 +16,13 @@
         android:background="@color/actionBarBackgroundColor"
         android:orientation="horizontal"
         >
+        <ImageView
+            android:layout_marginLeft="30dp"
+            android:layout_width="13dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_student_index_pull"
+            android:src="@drawable/pull"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -24,8 +32,10 @@
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:paddingLeft="20dp"
+            android:layout_alignLeft="@id/activity_student_index_pull"
             />
     </RelativeLayout>
+
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -44,37 +54,87 @@
         android:layout_marginTop="1sp"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="学习"
             android:layout_weight="1"
-            android:background="@drawable/bottom_button"
-            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:orientation="vertical"
             android:id="@+id/student_index_study"
-            android:layout_margin="0dp"
-            android:padding="0dp"
-            style="@style/OnClickText"
-            />
+            >
+            <ImageView
+                android:id="@+id/student_index_study_image_view"
+                android:layout_marginTop="10dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/schedule"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="学习"
+                android:background="@drawable/bottom_button"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/student_index_study_text_view"
+                android:layout_margin="0dp"
+                android:padding="0dp"
+                style="@style/OnClickText"
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="查询"
             android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
             android:id="@+id/student_index_inquire"
-            android:background="@drawable/bottom_button"
-            style="@style/unClickText"
-            />
-        <TextView
-            android:layout_width="wrap_content"
+            >
+            <ImageView
+                android:id="@+id/student_index_inquire_image_view"
+                android:layout_marginTop="10dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/un_query"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="查询"
+                android:layout_weight="1"
+                android:id="@+id/student_index_inquire_text_view"
+                android:background="@drawable/bottom_button"
+                style="@style/unClickText"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="我"
-            android:background="@drawable/bottom_button"
             android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
             android:id="@+id/student_index_mine"
-            style="@style/unClickText"
-            />
+            >
+            <ImageView
+                android:id="@+id/student_index_mine_image_view"
+                android:layout_marginTop="10dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/un_mine"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="我"
+                android:background="@drawable/bottom_button"
+                android:layout_weight="1"
+                android:id="@+id/student_index_mine_text_view"
+                style="@style/unClickText"
+                />
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
