--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,17 +40,35 @@
                 android:background="#ffffff"
                 android:orientation="horizontal"
                 android:layout_marginBottom="1sp"
+                android:layout_gravity="center"
+                android:gravity="center"
                 >
-                <Spinner
-                    android:id="@+id/login_roles"
-                    android:gravity="center"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
-                    style="@style/Theme.AppCompat.Light"
-                    android:entries="@array/roles">
+                    android:weightSum="8"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    >
+                    <Spinner
+                        android:id="@+id/login_roles"
+                        android:gravity="center"
+                        android:layout_width="0dp"
+                        android:layout_weight="6"
+                        android:layout_height="match_parent"
+                        style="@style/spinnerLight"
+                        android:entries="@array/roles">
+                    </Spinner>
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:src="@drawable/grey_pull"
+                        />
+                </LinearLayout>
 
-                </Spinner>
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
