--- a/app/src/main/res/layout/activity_student_change_info.xml
+++ b/app/src/main/res/layout/activity_student_change_info.xml
@@ -145,7 +145,9 @@
         </LinearLayout>
 
         <Button
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
