--- a/app/src/main/res/layout/activity_teacher_checking.xml
+++ b/app/src/main/res/layout/activity_teacher_checking.xml
@@ -32,33 +32,63 @@
         android:orientation="horizontal"
         android:background="#f5f2f2"
         >
-
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="@string/AskForLeaveInfo"
+            android:layout_weight="1"
+            android:orientation="vertical"
             android:gravity="center"
-            style="@style/OnClickText"
             android:id="@+id/teacher_ask_for_leave_info"
-            />
+            >
+            <ImageView
+                android:id="@+id/teacher_ask_for_leave_info_image_view"
+                android:layout_marginTop="5dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/query"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/AskForLeaveInfo"
+                android:gravity="center"
+                style="@style/OnClickText"
+                android:id="@+id/teacher_ask_for_leave_info_text_view"
+                />
+         </LinearLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            style="@style/unClickText"
+            android:orientation="vertical"
             android:gravity="center"
-            android:text="@string/checking"
             android:id="@+id/teacher_checking"
-            />
+            >
+            <ImageView
+                android:id="@+id/teacher_checking_image_view"
+                android:layout_marginTop="5dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/un_checking"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/unClickText"
+                android:gravity="center"
+                android:text="@string/checking"
+                android:id="@+id/teacher_checking_text_view"
+                />
+        </LinearLayout>
+
     </LinearLayout>
+
     <android.support.v4.view.ViewPager
-        xmlns:androdi="http://schemas.android.com/apk/res/android"
-        androdi:id="@+id/teacher_checking_fragment_container"
-        androdi:layout_width="match_parent"
-        androdi:layout_height="0dp"
-        androdi:layout_weight="37"
+        android:id="@+id/teacher_checking_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="37"
 
         >
     </android.support.v4.view.ViewPager>
