--- a/app/src/main/res/layout/fragment_teacher_mine.xml
+++ b/app/src/main/res/layout/fragment_teacher_mine.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#ebebeb"
+    android:background="@color/backgroundColor"
     android:orientation="vertical"
     >
     <LinearLayout
@@ -78,13 +78,10 @@
         <ImageView
             android:id="@+id/imageview_change_password"
             android:layout_marginLeft="15dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="26dp"
+            android:layout_height="match_parent"
             android:layout_marginRight="5dp"
-            android:src="@drawable/search_icon"
-            android:layout_gravity="center"
+            android:src="@drawable/change_password"
             android:layout_alignParentLeft="true"
             />
         <TextView
@@ -110,12 +107,10 @@
         <ImageView
             android:id="@+id/imageview_mine_info"
             android:layout_marginLeft="15dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
             android:layout_marginRight="5dp"
-            android:src="@drawable/search_icon"
+            android:src="@drawable/alter"
             android:layout_gravity="center"
             android:layout_alignParentLeft="true"
             />
@@ -136,13 +131,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="注销"
-        android:background="#fd6464"
+        android:background="@drawable/exit_button"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:textSize="16dp"
         android:id="@+id/teacher_fragment_mine_exit"
         />
-
-
-
 
 
 </LinearLayout>
