--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
         <!--<item name="android:textStyle">bold</item>-->
     <!--</style>-->
     <style name="OnClickText" parent="bottom_textview">
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:textColor">#14b7f5</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -53,8 +53,12 @@
     <!--</style>-->
     <style name="unClickText" parent="bottom_textview">
         <item name="android:textColor">#939393</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">10dp</item>
         <item name="android:textStyle">normal</item>
+    </style>
+    <style name="spinnerLight">
+        <item name="android:background">#ffffff</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
 
