--- a/app/src/main/res/layout/activity_teacher_index.xml
+++ b/app/src/main/res/layout/activity_teacher_index.xml
@@ -15,13 +15,6 @@
         android:background="@color/actionBarBackgroundColor"
         android:orientation="horizontal"
         >
-        <ImageView
-            android:layout_marginLeft="30dp"
-            android:layout_width="13dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/activity_teacher_index_pull"
-            android:src="@drawable/pull"
-            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -30,8 +23,16 @@
             android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="20dp"
-            android:paddingLeft="20dp"
-            android:layout_alignLeft="@id/activity_teacher_index_pull"
+            android:paddingLeft="30dp"
+            />
+        <ImageView
+            android:id="@+id/activity_teacher_index_add_course"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/add"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginRight="20dp"
             />
     </RelativeLayout>
     <android.support.v4.view.ViewPager
