--- a/app/src/main/res/layout/fragment_teacher_inquire.xml
+++ b/app/src/main/res/layout/fragment_teacher_inquire.xml
@@ -1,13 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.example.checkingsystem.teacher.fragment.TeacherInquireFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="#ffffff"
+    >
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:divider="#000000"
+        android:dividerHeight="1px"
+        android:id="@+id/fragment_teacher_inquire_list_view"
+        >
+    </ListView>
 
-</FrameLayout>
+</LinearLayout>
