--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,13 @@
         <item name="android:background">#ffffff</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <style name="courseTextStyleBig">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">#5b5353</item>
+    </style>
+    <style name="courseTextStyleSmall">
+        <item name="android:textSize">14dp</item>
+    </style>
 
 
 </resources>
