--- a/app/src/main/res/layout/activity_regist_face.xml
+++ b/app/src/main/res/layout/activity_regist_face.xml
@@ -31,7 +31,7 @@
                 >
 
             </LinearLayout>
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
@@ -42,8 +42,10 @@
                     android:layout_height="match_parent"
                     android:background="#00ffffff"
                     />
-
-            </LinearLayout>
+                <util.MyAnimView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
