--- a/app/src/main/res/layout/activity_teacher_checking_student_attendance_list.xml
+++ b/app/src/main/res/layout/activity_teacher_checking_student_attendance_list.xml
@@ -56,6 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent">
             <Button
+                android:id="@+id/activity_teacher_checking_student_attendance_list_close_button"
                 android:text="结束"
                 android:textColor="#ffffff"
                 android:layout_margin="10dp"
