--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,6 +67,15 @@
     <style name="courseTextStyleSmall">
         <item name="android:textSize">14dp</item>
     </style>
+    <style name="blackText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="blackEditText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
 
 
 </resources>
