--- a/app/src/main/res/layout/activity_assistant_agree_for_class.xml
+++ b/app/src/main/res/layout/activity_assistant_agree_for_class.xml
@@ -37,11 +37,11 @@
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="150dp">
+                android:layout_height="300dp">
                 <ImageView
                     android:id="@+id/iv_activity_assistant_agree_for_class_head"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"/>
                     />
             </LinearLayout>
 
@@ -183,18 +183,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp">
             </LinearLayout>
-
-            <Button
-                android:id="@+id/btn_activity_assistant_agree_for_class_submit"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/input_login"
-                android:text="开班"
-                android:textSize="17dp"
-                android:textColor="#ffffff"
-                />
+                android:orientation="horizontal"
+                >
+                <Button
+                    android:layout_weight="1"
+                    android:id="@+id/btn_activity_assistant_agree_for_class_submit"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/input_login"
+                    android:text="同意"
+                    android:textSize="17dp"
+                    android:textColor="#ffffff"
+                    />
+                <Button
+                    android:layout_weight="1"
+                    android:id="@+id/btn_activity_assistant_agree_for_class_refuse"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/exit_button"
+                    android:text="拒绝"
+                    android:textSize="17dp"
+                    android:textColor="#ffffff"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
