--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,43 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/activity_main"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-    >
+                android:layout_height="match_parent">
 
-
+    <util.CustomVideoView
+        android:id="@+id/videoview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_login"
         android:orientation="vertical"
         android:layout_x="0dp"
         android:layout_y="0dp">
-        
-        <de.hdodenhof.circleimageview.CircleImageView
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            app:civ_border_width="1px"
-            app:civ_border_color="#FF000000"
-            android:src="@drawable/icon_head"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="center"
-            />
-        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="#e6e7e7"
             android:orientation="vertical"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff"
                 android:orientation="horizontal"
                 android:layout_marginBottom="1sp"
                 android:layout_gravity="center"
@@ -58,13 +53,17 @@
                         android:layout_weight="6"
                         android:layout_height="match_parent"
                         style="@style/spinnerLight"
-                        android:entries="@array/roles">
+                        android:spinnerMode="dropdown"
+                        android:dropDownVerticalOffset="35dp"
+                        android:dropDownHorizontalOffset="20dp"
+                        android:background="#00ffffff"
+                        android:popupBackground="#00ffffff">
                     </Spinner>
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:src="@drawable/grey_pull"
+                        android:src="@drawable/spinner_down"
                         />
                 </LinearLayout>
 
@@ -74,11 +73,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="@string/enter_username"
-                    android:background="@null"
                     android:id="@+id/login_usernameEdit"
-                    android:textColorHint="#8c8c8c"
+                    android:textColorHint="#ffffff"
+                    android:textColor="#ffffff"
                     android:layout_margin="2dp"
-                    android:padding="2dp"
                     android:inputType="number"
                     />
             </LinearLayout>
@@ -86,31 +84,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff"
                 >
                 <TextView
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@null"/>
+                    android:layout_weight="3" />
                 <EditText
                     android:id="@+id/login_passwordEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="@string/enter_password"
-                    android:background="@null"
-                    android:textColorHint="#8c8c8c"
+                    android:textColorHint="#ffffff"
+                    android:textColor="#ffffff"
                     android:layout_margin="2dp"
-                    android:padding="2dp"
                     android:inputType="textPassword"
                     />
             </LinearLayout>
-
         </LinearLayout>
         <RelativeLayout
-
             android:layout_width="match_parent"
             android:layout_height="40dp">
             <TextView
@@ -121,6 +114,7 @@
                 android:text="忘记密码？"
                 android:textSize="16dp"
                 android:textColor="#1ca3d4"
+                android:layout_marginLeft="5dp"
                 android:id="@+id/activity_login_forget_password"/>
             <TextView
                 android:gravity="center"
@@ -130,19 +124,24 @@
                 android:text="新用户注册"
                 android:textSize="16dp"
                 android:textColor="#1ca3d4"
+                android:layout_marginRight="5dp"
                 android:id="@+id/activity_login_regist"/>
-
         </RelativeLayout>
+
         <Button
             android:id="@+id/login_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/submit"
             android:textColor="#ffffff"
+            android:background="@drawable/login_button"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/input_login"
             />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
     </LinearLayout>
-</AbsoluteLayout>
+</RelativeLayout>
