--- a/app/src/main/res/layout/activity_student_index.xml
+++ b/app/src/main/res/layout/activity_student_index.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:weightSum="11"
-    android:background="#ebebeb"
+    android:background="@color/backgroundColor"
     >
 
     <RelativeLayout
