--- a/app/src/main/res/layout/activity_verify_face.xml
+++ b/app/src/main/res/layout/activity_verify_face.xml
@@ -8,22 +8,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="8"
+        android:weightSum="6"
         android:orientation="vertical"
         >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            >
 
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
             android:orientation="horizontal"
-            android:weightSum="4"
+            android:weightSum="6"
             >
             <LinearLayout
                 android:layout_width="0dp"
@@ -32,10 +26,10 @@
                 >
 
             </LinearLayout>
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
+                android:layout_weight="4"
                 android:orientation="horizontal">
 
                 <util.SurfaceViewCircle
@@ -44,8 +38,10 @@
                     android:layout_height="match_parent"
                     android:background="#00ffffff"
                     />
-
-            </LinearLayout>
+                <util.MyAnimView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -58,7 +54,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -69,7 +65,13 @@
                 android:gravity="center"
                 />
         </LinearLayout>
-        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+
+        </LinearLayout>
         
     </LinearLayout>
 
