--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,7 +75,16 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <style name="MyAlertDialog" parent="AlertDialog.AppCompat.Light">
 
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/black</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
 
 
 </resources>
