--- a/app/src/main/res/layout/activity_student_query_course_item_info.xml
+++ b/app/src/main/res/layout/activity_student_query_course_item_info.xml
@@ -24,13 +24,13 @@
             />
 
     </LinearLayout>
-    <ListView
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/activity_student_query_course_item_info_list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
         >
 
-    </ListView>
+    </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
 </LinearLayout>
