--- a/app/src/main/res/layout/fragment_assistant_inquire.xml
+++ b/app/src/main/res/layout/fragment_assistant_inquire.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/lv_fragment_assistant_inquire"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </ListView>
+    </com.handmark.pulltorefresh.library.PullToRefreshListView>
 </LinearLayout>
